# patrol_robot

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
config/: Credentials.yaml  credentials.yaml.example  patrol_robot.rviz  waypoints.yaml
launch/: demo.launch.py
patrol_robot/: alert_sender.py  audio_alert.py  credentials.py  glowforge_monitor.py  human_detection_service.py  human_detector.py  main_demo.py  motor_controller.py  navigator.py
test/: sim1.json  sim2.json
urdf/: patrol_robot.urdf.xacro
