<?xml version="1.0"?>
<package format="3">
  <name>patrol_robot</name>
  <version>0.1.0</version>
  <description>Patrol robot for laser engraver safety monitoring</description>
  <maintainer email="sunyhg@uw.edu">Jason</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>nav2_simple_commander</depend>
  <depend>cv_bridge</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>