<?xml version="1.0"?>
<package format="3">
  <name>patrol_robot</name>
  <version>0.1.0</version>
  <description>Patrol robot for laser engraver safety monitoring</description>
  <maintainer email="sunyhg@uw.edu">Jason</maintainer>
  <license>MIT</license>

  <!-- ── Build tool ─────────────────────────────────────────────────── -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ── ROS2 core ──────────────────────────────────────────────────── -->
  <depend>rclpy</depend>
  <depend>rclpy_action</depend>

  <!-- ── Messages / services / actions ─────────────────────────────── -->
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>

  <!-- ── TF2 (used in navigator.py for robot pose lookup) ──────────── -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- ── Navigation ─────────────────────────────────────────────────── -->
  <depend>nav2_msgs</depend>             <!-- NavigateToPose action -->
  <depend>nav2_simple_commander</depend> <!-- BasicNavigator (kept for compat) -->

  <!-- ── Robot description ──────────────────────────────────────────── -->
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <!-- ── ROS2 control (gix Dynamixel motor) ─────────────────────────── -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <!-- ── Sensor / camera ────────────────────────────────────────────── -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- ── Visualization ──────────────────────────────────────────────── -->
  <depend>rviz2</depend>
  <depend>rviz_default_plugins</depend>

  <!-- ── Package path resolution ────────────────────────────────────── -->
  <depend>ament_index_python</depend>

  <!-- ── Test dependencies ──────────────────────────────────────────── -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>